Fixed some layout and overflow issues

--- a/frontend/src/Footer.css
+++ b/frontend/src/Footer.css
@@ -8,7 +8,7 @@ footerBox {
     padding-bottom: 3.5%;
     background: #2a1c55;
     justify-content: left;
-    width: 100%;;
+    width: 100%;
 }
 
 /* column Component */
